// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ScopeExplorer > a node lists the rules its statement made 1`] = `
{
  "draw (a card)": [
    {
      "name": "draw",
      "syntax": "draw {thisArg:expression}",
    },
  ],
  "is a (suit)": [
    {
      "name": "is_a_$suit",
      "syntax": "{operator:is} (a|an) (expression:club|diamond|heart|spade)",
    },
  ],
}
`;

exports[`ScopeExplorer > a type's members:  in document order, by file then line -- each with its line 1`] = `
[
  "property rank",
  "enumeration Ranks",
  "constant ace",
  "constant jack",
  "constant queen",
  "constant king",
  "property suit",
  "enumeration Suits",
  "constant clubs",
  "constant diamonds",
  "constant hearts",
  "constant spades",
  "property color",
  "constant black",
  "constant red",
  "property value",
  "property direction",
  "enumeration Directions",
  "constant up",
  "constant down",
  "method is face up",
  "method is face down",
  "method is a face card",
  "method is a (suit)",
  "method is a (rank)",
  "method is the (rank) of (suits)",
  "property name",
  "property short-suit",
  "property short-rank",
  "property short-direction",
  "property short-name",
  "property state",
  "method turn (a card) face up",
  "method turn (a card) face down",
  "method turn (a card) over",
  "method draw (a card)",
  "method move (a card) to (a pile)",
  "property pile",
  "method play (a card)",
  "method (a thing) belongs to one (list)",
  "method draw (a thing)",
]
`;

exports[`ScopeExplorer > root holds the built-in types, then the project:  its files, and what each declares 1`] = `
"root Spell (built in)
  type Thing (base type)
    method (a thing) belongs to one (list)
    method draw (a thing)
  type List (counts from 1)
    property length (number)
    property size (number)
    method (a list) can give up (a thing)
    method (a list) can take (a thing)
    method (a list) has items where
    method (a list) starts with (a thing)
    method a copy of (a list)
    method a random item of (a list)
    method add (a thing) to (a list)
    method draw (a list)
    method empty (a list)
    method for each (item) in (a list)
    method item (n) of (a list)
    method items (start) to (end) of (a list)
    method items in (a list) where
    method merge (lists)
    method move (a thing) to (a list)
    method number of (items) in (a list)
    method position of (a thing) in (a list)
    method remove (a thing) from (a list)
    method reverse (a list)
    method shuffle (a list)
  type App (is a Thing)
    method start (an app)
  type Text
    property length (number)
    property characters (list of characters)
    method character (n) of (a text)
    method number of characters in (a text)
    method a random character of (a text)
    method (a text) as upper case
  type Date
    property year (number)
    property day (number)
  project Solitaire
    file Card.spell
      type Card (is a Thing)
      function test card setup
    file Deck.spell
      type Deck (is a List)
      function test deck creation
    file Pile.spell
      type Pile (is a List)
    file Solitaire.spell
      type Game (is a App)
      variable game (Game)
      variable all_piles (list of piles)
      variable foundations (list of piles)
      variable tableaus (list of piles)
      type Stock_Pile (is a Pile)
      variable stock (Stock_Pile)
      type Discard_Pile (is a Pile)
      variable discards (Discard_Pile)
      type Foundation (is a Pile)
      variable it (Foundation)
      type Tableau (is a Pile)
      variable deck (Deck)
      function debug the game
      function reset the stock pile
      function play from the stock pile
      function deal the cards
      function auto-play
      function reset the game
      function cheat"
`;

exports[`ScopeExplorer of a project importing another, compiled > the imported project shows, with its own files and types, ahead of ours 1`] = `
"root Spell (built in)
  type Thing (base type)
    method (a thing) belongs to one (list)
    method draw (a thing)
  type List (counts from 1)
    property length (number)
    property size (number)
    method (a list) can give up (a thing)
    method (a list) can take (a thing)
    method (a list) has items where
    method (a list) starts with (a thing)
    method a copy of (a list)
    method a random item of (a list)
    method add (a thing) to (a list)
    method draw (a list)
    method empty (a list)
    method for each (item) in (a list)
    method item (n) of (a list)
    method items (start) to (end) of (a list)
    method items in (a list) where
    method merge (lists)
    method move (a thing) to (a list)
    method number of (items) in (a list)
    method position of (a thing) in (a list)
    method remove (a thing) from (a list)
    method reverse (a list)
    method shuffle (a list)
  type App (is a Thing)
    method start (an app)
  type Text
    property length (number)
    property characters (list of characters)
    method character (n) of (a text)
    method number of characters in (a text)
    method a random character of (a text)
    method (a text) as upper case
  type Date
    property year (number)
    property day (number)
  project lib (imported)
    file Card.spell
      type Card (is a Thing)
      function test card setup
    file Deck.spell
      type Deck (is a List)
      function test deck creation
    file Pile.spell
      type Pile (is a List)
  project app
    file Solitaire.spell
      type Game (is a App)
      variable game (Game)
      variable all_piles (list of piles)
      variable foundations (list of piles)
      variable tableaus (list of piles)
      type Stock_Pile (is a Pile)
      variable stock (Stock_Pile)
      type Discard_Pile (is a Pile)
      variable discards (Discard_Pile)
      type Foundation (is a Pile)
      variable it (Foundation)
      type Tableau (is a Pile)
      variable deck (Deck)
      function debug the game
      function reset the stock pile
      function play from the stock pile
      function deal the cards
      function auto-play
      function reset the game
      function cheat"
`;
